[package]
name = "perftree-cli"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "Command-line interface for perftree"
license = "MIT"
repository = "https://github.com/agausmann/perftree"
keywords = ["chess", "perft", "debugger", "cli"]

categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::debugging",
    "development-tools::testing",
]

[dependencies]
perftree = { version = "0.3.0", path = "../perftree" }
atty = "0.2"
termcolor = "1.1"
anyhow = "1.0.97"
